# ceia-mlops

./: .env  .gitignore  README.md  docker-compose.yaml
notebooks/: Untitled.ipynb  pyproject.toml
postgres/: Dockerfile
service/: Dockerfile  healthcheck.py  pyproject.toml
service/assets/: api-v1.yaml
service/automation/: test_predict.py
service/cache/: num-minmax-logit-prod.pkl
service/src/: main.py  model.py  persistence.py  pipeline.py
service/templates/: index.html  prediction.html
src/service/: main.py  pyproject.toml
src/service/automation/: test_predict.py
src/service/src/: main.py
src/service/templates/: index.html
